Construct base manifests.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>dlas-to-iiif</title>
   </head>
   <body>
-    <script type="module" src="./src/index.js"></script>
+    <script type="module" src="./src/api/index.ts"></script>
   </body>
 </html>
