Add basic viewer for homepage, fix manifest partOf.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <script type="module" src="./src/api/index.ts"></script>
+    <script src="https://www.unpkg.com/@samvera/clover-iiif@latest/dist/web-components/index.umd.js"></script>
+
+    <clover-viewer
+      id="https://mathewjordan.github.io/dlas-to-iiif/api/collection/deeds.json"
+    />
   </body>
 </html>
